# kanastra-billing-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-mongo.js  init_mongo.sh  pyproject.toml
app/: config.py  container.py  initialize_db.py  main.py
app/application/tasks/: create_debt_task.py  send_email.py
app/application/use_cases/: process_csv_billing.py  use_case.py
app/common/errors/: internal_exceptions.py
app/common/utils/: logger_utility.py
app/domain/dtos/: debt_dto.py  debtor_dto.py
app/domain/entities/: debt.py  debtor.py
app/domain/services/: billet_service.py  billing_service.py  email_service.py
app/domain/services/abstracts/: billing_service.py  email_service.py
app/domain/value_objects/: due_date.py  email.py  government_id.py
app/infrastructure/billets/: billet_generator.py
app/infrastructure/database/schemas/: debt.py  debtor.py
app/infrastructure/email/: sender.py  sender_print.py
app/infrastructure/file_processors/: csv_processor.py
app/infrastructure/messages/: celery.py
app/infrastructure/repositories/: debt_repository.py
app/infrastructure/repositories/mongo/: debt_repository.py
app/interfaces/api/: billing_router.py
app/tests/: __init__.py
app/tests/integration/: test_integrations.py  test_mongo_repo.py
app/tests/unit/: test_email_service.py  test_units.py
