[tool.poetry]
name = "app"
version = "0.0.2"
description = "A FastAPI-based billing system"
authors = ["Gabriel Mouta <rodriguesgabrielti@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.13.*"
pytest = "^8.3.4"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
mypy = "^1.15.0"
dependency-injector = {extras = ["yaml"], version = "^4.38.0"}
python-multipart = "^0.0.20"
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"
pandas = "^2.2.3"
email-validator = "^2.2.0"
alembic = "^1.14.1"
celery = "^5.4.0"
redis = "^5.2.1"
elasticsearch = "^8.17.1"
aiohttp = "^3.11.12"
pymongo = "^4.11.1"
motor = "^3.7.0"
httpx = "^0.28.1"
anyio = "^4.8.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.5"
isort = "^6.0.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]